[package]
name = "mongoquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
async-trait = "^0.1.13"
serde = "^1.0"
serde_json = "^1.0"
thiserror = "^1.0"

[dev-dependencies]
futures = "0.3.25"
lazy_static = "1.4.0"
tokio = { version = "1.23.0", features = ["full"] }
